roles/registry/files/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: registry
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: 'true'
spec:
  tls:
    - hosts:
        - registry.local
      secretName: registry-tls
  rules:
    - host: registry.local
      http:
        paths:
          - path: /
            backend:
              serviceName: registry
              servicePort: 5000
